Mon Jul 18 22:31:12 2005  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/ciao/Container_Impl.cpp
        * DAnCE/ciao/Container_Impl.h
        * DAnCE/ciao/CCM_Core.mpc
        * DAnCE/ciao/NodeApplication_Impl.cpp

	  Added support for registering components with naming service.
	  A system deployer could config such capability through XML tag

        * DAnCE/examples/BasicSP/descriptors/flattened_deploymentplan.cdp
        * DAnCE/examples/Hello/descriptors/flattened_deploymentplan.cdp

	  Added a couple of examples for using naming service by adding
	  some <ConfigProperty> tag to the deployment plan descriptor.

Fri Jul 15 23:50:12 2005  Gan Deng  <gan.deng@vanderbilt.edu>

        * NEWS:
          Updated the NEWS file to include the result of our latest 
	  discussion/plan about DAnCE.

Fri Jul 15 10:02:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NAM_Map.h:
          Fixed fuzz error

Tue Jul  12 00:03:57 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * docs/tutorials/Quoter/Simple/README.html

        Updated some directory information in this file since the quoter example has been
        moved to new directory.

Mon Jul  11 11:44:57 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * TAO/CIAO/DAnCE/examples/Quoter/README.html
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker.cidl
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker.cpp
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker.idl
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker.mpc
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker_exec.cpp
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker_exec.h
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker_exec_export.h
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker_stub_export.h
        * TAO/CIAO/DAnCE/examples/Quoter/Broker/Broker_svnt_export.h
        * TAO/CIAO/DAnCE/examples/Quoter/Distributor/Distributor.cidl